[package]
name = "wx-core"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/RustTemplate"
repository = "https://github.com/oovm/RustTemplate"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
url = "2.5.4"
serde_json = "1.0.135"
base64 = "0.22.1"
dirs = "5.0.1"
pbkdf2 = { version = "0.12.2", features = ["hmac"] }
sha1 = "0.10.6"
hmac = "0.12.1"
cbc = "0.1.2"
aes = "0.8.4"
byteorder = "1.5.0"
walkdir = "2.5.0"
tracing = "0.1.41"
tokio = { workspace = true, features = ["fs"] }
chrono = { version = "0.4.39" }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite"] }

[dependencies.windows]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
]
optional = true

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }

[features]
default = ["shell"]
shell = ["windows"]

[package.metadata.docs.rs]
all-features = true
