[package]
name = "wx-core"
version = "0.0.2"
authors = ["Aster <192607617@qq.com>"]
description = "微信数据解析工具"
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/wx-dump/tree/dev/projects/wx-core"
repository = "https://github.com/oovm/wx-dump"
documentation = "https://docs.rs/wx-core"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
url = "2.5.4"
serde_json = "1.0.135"
base64 = "0.22.1"
dirs = "5.0.1"
pbkdf2 = { version = "0.12.2", features = ["hmac"] }
sha1 = "0.10.6"
hmac = "0.12.1"
cbc = "0.1.2"
aes = "0.8.4"
byteorder = "1.5.0"
walkdir = "2.5.0"
tracing = "0.1.41"
tokio = { workspace = true, features = ["fs"] }
#chrono = { version = "0.4.39" }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite"] }
futures-util = "0.3.31"
lz4_flex = "0.11.3"
rust_xlsxwriter = { version = "0.80.0", features = ["constant_memory", "chrono"] }
serde = { version = "1.0.217", features = ["derive"] }
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"

[dependencies.wx-proto]
version = "0.0.*"
path = "../wx-proto"

[dependencies.windows]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
]
optional = true

[dev-dependencies]
anyhow = "1.0.95"
tokio = { version = "1.42.0", features = ["full"] }

[features]
default = ["shell"]
shell = ["windows"]

[package.metadata.docs.rs]
all-features = true
