[package]
name = "wx-dump"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "微信数据导出工具"
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/wx-dump/tree/dev/projects/wx-core"
repository = "https://github.com/oovm/wx-dump"
documentation = "https://docs.rs/wx-dump"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[[bin]]
name = "wxdump"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
clap = { version = "4.5.24", features = ["derive"] }
base64 = "0.22.1"
byteorder = "1.5.0"
tracing = "0.1.41"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
tracing-subscriber = "0.3.19"

[dependencies.windows]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
]
#optional = true

[dependencies.wx-core]
version = "0.0.*"
path = "../wx-core"

[features]
default = []

