[package]
name = "wx-proto"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "微信 protobuf 字段定义"
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/wx-dump/tree/dev/projects/wx-core"
repository = "https://github.com/oovm/wx-dump"
documentation = "https://docs.rs/wx-core"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
sqlx = { version = "0.8.2", features = ["sqlite"] }
prost = { version = "0.13.4" }

[dev-dependencies]

[build-dependencies]
protox = "0.7.1"
prost-build = "0.13.4"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
